--- a/project.config.json
+++ b/project.config.json
@@ -23,6 +23,7 @@
 	"projectname": "Library",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"libVersion": "2.7.7",
 	"condition": {
 		"search": {
 			"current": -1,
@@ -32,13 +33,31 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 1,
+			"list": [
+				{
+					"id": -1,
+					"name": "pages/me/main",
+					"pathName": "pages/me/main",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/comment/main",
+					"pathName": "pages/comment/main",
+					"scene": null
+				}
+			]
 		}
 	}
 }
