--- a/src/app.json
+++ b/src/app.json
@@ -2,11 +2,12 @@
   "pages": [
     "pages/books/main",
     "pages/comment/main",
-    "pages/me/main"
+    "pages/me/main",
+    "pages/detail/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#d63031",
+    "navigationBarBackgroundColor": "#ea5149",
     "navigationBarTitleText": "图书",
     "navigationBarTextStyle": "white"
   },
