--- a/project.config.json
+++ b/project.config.json
@@ -19,8 +19,8 @@
 	},
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
-	"appid": "wx75b76219871e0e3d",
-	"projectname": "Library",
+	"appid": "wx2dc3f32efa51aee7",
+	"projectname": "书一二",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"libVersion": "2.7.7",
