--- a/src/app.json
+++ b/src/app.json
@@ -8,7 +8,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#ea5149",
-    "navigationBarTitleText": "图书",
+    "navigationBarTitleText": "书一二",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
@@ -23,15 +23,10 @@
       "iconPath": "static/tabs/home.png",
       "selectedIconPath": "static/tabs/home-active.png"
     }, {
-      "text": "评论",
-      "pagePath": "pages/comment/main",
-      "iconPath": "static/tabs/orders.png",
-      "selectedIconPath": "static/tabs/orders-active.png"
-    }, {
       "text": "我的",
       "pagePath": "pages/me/main",
-      "iconPath": "static/tabs/home.png",
-      "selectedIconPath": "static/tabs/home-active.png"
+      "iconPath": "static/tabs/me.png",
+      "selectedIconPath": "static/tabs/me-active.png"
     }]
   }
 }
