--- a/project.config.json
+++ b/project.config.json
@@ -20,7 +20,7 @@
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
 	"appid": "wx2dc3f32efa51aee7",
-	"projectname": "书一二",
+	"projectname": "%E4%B9%A6%E4%B8%80%E4%BA%8C",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"libVersion": "2.7.7",
@@ -42,7 +42,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -55,6 +55,14 @@
 					"id": -1,
 					"name": "pages/comment/main",
 					"pathName": "pages/comment/main",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/mybook/main",
+					"pathName": "pages/mybook/main",
+					"query": "",
 					"scene": null
 				}
 			]
